--- a/blog_website/templates/home.html
+++ b/blog_website/templates/home.html
@@ -1,9 +1,9 @@
-{% extends 'header.html' %}
+{% extends 'main_website.html' %}
 
 
 {% block content %}
 <center>
-    <h1 class="title" >WELCOME GUEST</h1>
+    <h1 class="title" >WELCOME</h1>
 
 
 </center>
