--- a/blog_website/templates/main_website.html
+++ b/blog_website/templates/main_website.html
@@ -1,21 +1,21 @@
 {% load static %}
 
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="{% static 'style.css' %}">
-</head>
-<body>
-    <div class="header">
-        <a href="/" class="logo">Blogger</a>
-        <div class="header-right">
-        <a class="home" href="/">Home</a>
-        <a class="article" href="/article">Articles</a>
-        <a href="#contact">Contact</a>
-        <a href="/about">About</a>
+<!DOCTYPE html>
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="{% static 'style.css' %}">
+    </head>
+    <body>
+        <div class="header">
+            <a href="/" class="logo">Blogger</a>
+            <div class="header-right">
+                <a class="home" href="/">Home</a>
+                <a class="article" href="/article">Articles</a>
+                <a href="/about">About</a>
+            </div>
         </div>
-    </div>
-    {% block content %}
-    {% endblock %}
 
-
-</body>
+        {% block content %}
+        {% endblock %}
+    </body>
+</html>
