--- a/article/templates/article_page.html
+++ b/article/templates/article_page.html
@@ -1,10 +1,10 @@
-{% extends 'main_website.html' %}
+<html>
+    <head>
+        
+    </head>
 
+    <body>
+        <i> {{ slug }} <i>
+    </body>
 
-{% block content %}
-<center>
-    <h1 class="title" >Article List</h1>
-
-
-</center>
-{% endblock %}
+</html>
