Some article styling and changes

--- a/article/templates/article_page.html
+++ b/article/templates/article_page.html
@@ -3,6 +3,8 @@
 {% block content %}
 
 <div class="article">
+    <img src={{ article.image.url }}
+    <br>
     <div class="article_title">{{ article.title }}</div>
         <div class="date_position" >
             <div class="article_date_box"><p class="article_date">{{ article.date }}</p></div>
