--- a/blog_website/templates/main_website.html
+++ b/blog_website/templates/main_website.html
@@ -3,6 +3,7 @@
 <!DOCTYPE html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
         <link rel="stylesheet" href="{% static 'home_style.css' %}">
         <link rel="stylesheet" href="{% static 'article_style.css' %}">
     </head>
