--- a/article/templates/article_list.html
+++ b/article/templates/article_list.html
@@ -6,10 +6,12 @@
     <h1 class="title" >Article List</h1>
     <div class="articles">
         {% for article in articles %}
-            <div class="article" >
+            <div class="article"  >
+                <a href="{{article.slug}}">
                 <h2> {{ article.title }} </h2>
                 <p>{{ article.date }}</p>
                 <p>{{ article.description }}</p>
+                </a>
             </div>
         {% endfor %}
     </div>
