--- a/static/article_style.css
+++ b/static/article_style.css
@@ -1,7 +1,20 @@
+a, a:hover, a:visited, a:active {
+    color: inherit;
+    text-decoration: none;
+   }
+  
+
 .article {
     font-weight: 300;
     font-style: normal;
     text-align: center;
+}
+
+.article_image {
+    width: 100%;
+    height: auto;
+    top: 0;
+    bottom: 0;
 }
 
 .article_title {
