article in a minimalistic look

--- a/blog_website/templates/main_website.html
+++ b/blog_website/templates/main_website.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="{% static 'home_style.css' %}"/>
         <link rel="stylesheet" href="{% static 'footer_style.css' %}"/>
         <link rel="stylesheet" href="{% static 'article_style.css' %}"/>
+        <link rel="stylesheet" href="{% static 'article_box.css' %}"/>
     </head>
     <body>
         <div class="header">
