--- a/article/templates/article_list.html
+++ b/article/templates/article_list.html
@@ -4,13 +4,17 @@
 {% block content %}
 <center>
     <h1 class="title" >Article List</h1>
-    <div class="articles">
+    <div class="articles_box">
         {% for article in articles %}
-            <div class="article"  >
+            <div class="article_body"  >
                 <a href="{{article.slug}}">
-                <h2> {{ article.title }} </h2>
-                <p>{{ article.date }}</p>
-                <p>{{ article.description }}</p>
+                <h2 class="article_minimal_title"> {{ article.title }} </h2>
+                <div class="date_position_minimal" >
+                    <div class="article_date_box">
+                        <p class="article_date">{{ article.date }}</p>
+                    </div>
+                    <p class="article_author_minimal">{{ article.author }}</p>
+                </div>
                 </a>
             </div>
         {% endfor %}
