--- a/article/templates/article_list.html
+++ b/article/templates/article_list.html
@@ -9,11 +9,13 @@
             <div class="article_body"  >
                 <a href="{{article.slug}}">
                 <h2 class="article_minimal_title"> {{ article.title }} </h2>
-                <div class="date_position_minimal" >
-                    <div class="article_date_box">
-                        <p class="article_date">{{ article.date }}</p>
+                <div class="horizondal-object">
+                    <div class="date_position_minimal" >
+                        <div class="article_date_box">
+                            <p class="article_date">{{ article.date }}</p>
+                        </div>
+                        <p class="article_author_minimal">{{ article.author }}</p>
                     </div>
-                    <p class="article_author_minimal">{{ article.author }}</p>
                 </div>
                 </a>
             </div>
