updated home page

--- a/static/article_box.css
+++ b/static/article_box.css
@@ -5,14 +5,14 @@
     width:fit-content;
     display: inline-block;
     border-radius: 0%;
-    background-color:rgb(41, 35, 35);
-    padding: 8px;
+    background-color:rgb(88, 88, 88);
+    padding:20px;
     margin: 20px;
 }
 
 .article_minimal_title  {
     font-size: xx-large;
-    text-align: left;
+    text-align: center;
 }
 
 .horizondal-object > *{
