--- a/blog_website/templates/home.html
+++ b/blog_website/templates/home.html
@@ -4,5 +4,20 @@
 {% block content %}
 <center>
     <h1 class="title" >WELCOME</h1>
+    <div class="home_content"> Here we have a Article Example for This Website </div>
+    <a href="article/{{article.slug}}">
+        <div class="article_body_home"  > 
+            <h2 class="article_minimal_title"> {{ article.title }} </h2>
+            <div class="horizondal-object">
+                <div class="date_position_minimal" >
+                    <div class="article_date_box">
+                        <p class="article_date">{{ article.date }}</p>
+                    </div>
+                    <p class="article_author_minimal">{{ article.author }}</p>
+                </div>
+            </div>
+        </div>
+    </a>
+    <a href="article"><div class="more_article">More Articles</div></a>
 </center>
 {% endblock %}
