--- a/static/article_style.css
+++ b/static/article_style.css
@@ -53,3 +53,25 @@ a, a:hover, a:visited, a:active {
     position: bottom;
     font-size: 25px;
 }
+
+.article_body_home {
+    width: fit-content;
+    background-color: rgb(88, 88, 88);
+    padding: 20px;
+    margin: 30px;
+    border-radius: 40%;
+    text-align: center;
+}
+
+.more_article {
+    border: 25px;
+    border-radius: 35%;
+    background-color: rgb(71, 71, 71);
+    width: fit-content;
+    height:35px;
+    vertical-align: middle;
+    padding: 20px;
+    margin: 30px;
+    text-align: center;
+    font-size: larger;
+}
