updated about page

--- a/blog_website/templates/about.html
+++ b/blog_website/templates/about.html
@@ -4,5 +4,15 @@
 {% block content %}
 <center>
     <h1 class="title">About</h1>
+    <div class="content_text">
+        <p>This is Example Website for displaying a website with the help of django </p>
+        <p>Django is a free and open-source web framework that can help to build website with using python</p> 
+        <p>It contains the library that provide the basic server and can easily deployed the website</p>
+        <p>Django is pretty fast compare to Other frameworks</p>
+        <p>Django's primary goal is to ease the creation of complex, database-driven websites.
+        <p>The framework emphasizes reusability and "pluggability" of components, less code, low coupling,</p>
+        <p>rapid development, and the principle of don't repeat yourself . Python is used throughout,</p>
+        <p>even for settings, files, and data models.</p>
+    </div>
 </center>
 {% endblock %}
