--- a/blog_website/templates/home.html
+++ b/blog_website/templates/home.html
@@ -4,7 +4,7 @@
 {% block content %}
 <center>
     <h1 class="title" >WELCOME</h1>
-    <div class="home_content"> Here we have a Article Example for This Website </div>
+    <div class="content_text"> Here we have a Article Example for This Website </div>
     <a href="article/{{article.slug}}">
         <div class="article_body_home"  > 
             <h2 class="article_minimal_title"> {{ article.title }} </h2>
