--- a/blog_website/templates/main_website.html
+++ b/blog_website/templates/main_website.html
@@ -13,9 +13,9 @@
         <div class="header">
             <a href="/" class="logo">Blogger</a>
             <div class="header-right">
-                <a class="home" href="/">Home</a>
-                <a class="article" href="/article">Articles</a>
-                <a href="/about">About</a>
+                <a class="home" href="{% url 'home' %}">Home</a>
+                <a class="article" href="{% url 'article' %}">Articles</a>
+                <a href="{% url 'about' %}">About</a>
             </div>
         </div>
 
