--- a/article/templates/article_page.html
+++ b/article/templates/article_page.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="article">
-    <img class="article_image" src={{ url 'article.image.url' }}>
+    <img class="article_image" src={{ article.image.url }}>
     <div class="article_title">{{ article.title }}</div>
         <div class="date_position" >
             <div class="article_date_box">
