--- a/blog_website/templates/main_website.html
+++ b/blog_website/templates/main_website.html
@@ -14,7 +14,7 @@
             <a href="/" class="logo">Blogger</a>
             <div class="header-right">
                 <a class="home" href="{% url 'home' %}">Home</a>
-                <a class="article" href="{% url 'article' %}">Articles</a>
+                <a class="article" href="{% url 'article_list' %}">Articles</a>
                 <a href="{% url 'about' %}">About</a>
             </div>
         </div>
