--- a/blog_website/templates/main_website.html
+++ b/blog_website/templates/main_website.html
@@ -14,9 +14,9 @@
         <div class="header">
             <a href="/" class="logo">Blogger</a>
             <div class="header-right">
-                <a class="home" href="{% base_url %}/">Home</a>
-                <a class="article" href="{% base_url %}/article">Articles</a>
-                <a href="{% base_url %}/about">About</a>
+                <a class="home" href="/">Home</a>
+                <a class="article" href="/article">Articles</a>
+                <a href="/about">About</a>
             </div>
         </div>
 
