--- a/blog_website/templates/main_website.html
+++ b/blog_website/templates/main_website.html
@@ -1,5 +1,4 @@
 {% load static %}
-{% load custom_tags %}
 
 <!DOCTYPE html>
     <head>
@@ -14,9 +13,9 @@
         <div class="header">
             <a href="/" class="logo">Blogger</a>
             <div class="header-right">
-                <a class="home" href="/">Home</a>
-                <a class="article" href="/article">Articles</a>
-                <a href="/about">About</a>
+                <a class="home" href="{% url 'home' %}">Home</a>
+                <a class="article" href="{% url 'article_list' %}">Articles</a>
+                <a href="{% url 'about' %}">About</a>
             </div>
         </div>
 
