--- a/blog_website/templates/home.html
+++ b/blog_website/templates/home.html
@@ -5,7 +5,7 @@
 <center>
     <h1 class="title" >WELCOME</h1>
     <div class="content_text"> Here we have a Article Example for This Website </div>
-    <a href="article/{{article.slug}}">
+    <a href="{{ BASE_URL }}article/{{article.slug}}">
         <div class="article_body_home"  > 
             <h2 class="article_minimal_title"> {{ article.title }} </h2>
             <div class="horizondal-object">
@@ -18,6 +18,6 @@
             </div>
         </div>
     </a>
-    <a href="article"><div class="more_article">More Articles</div></a>
+    <a href="{{ BASE_URL }}article"><div class="more_article">More Articles</div></a>
 </center>
 {% endblock %}
