Fixed the Logo redirection

--- a/blog_website/templates/main_website.html
+++ b/blog_website/templates/main_website.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <div class="header">
-            <a href="/" class="logo">Blogger</a>
+            <a href="{{ BASE_URL }}" class="logo">Blogger</a>
             <div class="header-right">
                 <a class="home" href="{{ BASE_URL }}">Home</a>
                 <a class="article" href="{{ BASE_URL }}article">Articles</a>
